# apps/api/src/features/features.module.ts
@@ -1,0 +1,13 @@
+import { Module } from '@nestjs/common';
+import { TypeOrmModule } from '@nestjs/typeorm';
+import { Feature } from './entities/feature.entity.js';
+import { FeaturesController } from './features.controller.js';
+import { FeaturesService } from './features.service.js';
+
+@Module({
+  imports: [TypeOrmModule.forFeature([Feature])],
+  controllers: [FeaturesController],
+  providers: [FeaturesService],
+  exports: [FeaturesService],
+})
+export class FeaturesModule {}
